# mandel-rust

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile copy  Dockerfile_shell  LICENSE  README.md  intsructions.txt  rustfmt.toml
.github/workflows/: pipeline.yaml
k8s/: backend_config.yaml  backend_config_java.yaml  backend_config_rust.yaml  deployment.yaml  deployment_java.yaml  deployment_rust.yaml  ingress.yaml  ingress_java_only.yaml  ingress_rust_only.yaml  service_np.yaml  service_np_java.yaml
src/: listen.rs  main.rs  mandel.rs  mandel_memory.rs  mandel_new.rs
