[package]
name = "mandel-rust"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.15", features = ["headers"]}
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.4.0", default-features = false, features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["json"] }
anyhow = "1.0.69"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
